release-data/changelogs/8.2/plugins/reporting.adoc
= Changelogs for Rudder plugin reporting 8.2.\* versions

== reporting-8.2.5-2.1 (2025-02-27)

=== Changes


==== Miscellaneous

* Remove unused code of the old notification system
    (https://issues.rudder.io/issues/26283[#26283])

=== Bug fixes

==== Miscellaneous

* Fixed: Remove unused elm dependencies
    (https://issues.rudder.io/issues/26326[#26326])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.2.4-2.1 (2025-01-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.2.3-2.1 (2024-12-03)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.2.2-2.1 (2024-11-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.2.1-2.1 (2024-11-28)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.2.0-2.1 (2024-10-29)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.2.0.rc1-2.1 (2024-10-18)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Security benchmarks post-install fails without creating benchmark category.xml
    (https://issues.rudder.io/issues/25674[#25674])
* Fixed: Cannot generate report with reporting plugin
    (https://issues.rudder.io/issues/24786[#24786])

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.2.0.beta1-2.1 (2024-09-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.2.0.alpha1-2.1 (2024-09-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.2 series and therefore all installations of 8.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

