release-data/changelogs/8.3/plugins/reporting.adoc
= Changelogs for Rudder plugin reporting 8.3.\* versions

== reporting-8.3.0-2.1 (2025-04-23)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.3.0.rc1-2.1 (2025-04-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.3.0.beta1-2.1 (2025-03-07)

=== Changes


==== Architecture - evolution

* Impact of #24872 (API rights) on private plugins
    (https://issues.rudder.io/issues/26398[#26398])

==== Miscellaneous

* Remove unused code of the old notification system
    (https://issues.rudder.io/issues/26283[#26283])

=== Bug fixes

==== Packaging

* Fixed: Add a new requires_license field in the metadata in rudder-plugins-private
    (https://issues.rudder.io/issues/26360[#26360])

==== Miscellaneous

* Fixed: Remove unused elm dependencies
    (https://issues.rudder.io/issues/26326[#26326])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== reporting-8.3.0.alpha1-2.1 (2025-01-23)

=== Changes


==== UI - UX

* Change main menu (private plugins)
    (https://issues.rudder.io/issues/26096[#26096])

==== Miscellaneous

* Update elm dependencies
    (https://issues.rudder.io/issues/26050[#26050])

=== Bug fixes

==== Refactoring

* Fixed: Reporting and CVE don't compile in master
    (https://issues.rudder.io/issues/26097[#26097])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

